--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,11 @@
       "esnext",
       "dom",
       "dom.iterable",
-      "scripthost"
+      "scripthost",
+      "es5",
+      "es6",
+      "es7",
+      "es2015.promise"
     ]
   },
   "include": [
