--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
   "dependencies": {
     "@tinymce/tinymce-vue": "^2.0.0",
     "@types/axios": "^0.14.0",
+    "@types/echarts": "^4.1.9",
+    "@types/jquery": "^3.3.29",
+    "@types/js-cookie": "^2.2.2",
+    "@types/lodash": "^4.14.123",
+    "@types/moment-range": "^3.1.2",
     "@types/nprogress": "^0.0.29",
     "@types/tinymce": "^4.5.20",
-    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "echarts": "^4.2.1",
     "element-ui": "^2.7.2",
     "jquery": "^3.4.0",
-    "moment": "^2.24.0",
+    "js-cookie": "^2.2.0",
     "nprogress": "^0.2.0",
     "register-service-worker": "^1.6.2",
     "tinymce": "^5.0.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
-    "vue-cookie": "^1.1.4",
-    "vue-lodash": "^2.0.2",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3",
     "vuedraggable": "^2.20.0",
