--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,7 +36,7 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx", "types/shims-vue.d.ts", "types/shims-tsx.d.ts"
   ],
   "exclude": [
     "node_modules"
